# 100-days-of-grind

./: .gitignore  README.md  pyproject.toml
AIProjects/day1/: chat_pdfs.ipynb
AIProjects/day_1/: chatbot_1.py  chatbot_2.py  langgraph_tutorial1.ipynb
AIProjects/day_10/: make_improvements.ipynb
AIProjects/day_11/: test.ipynb
AIProjects/day_12/: LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml
AIProjects/day_12/docs/: index.md
AIProjects/day_12/src/hello_uv/: main.py
AIProjects/day_12/tests/: test_hello.py
AIProjects/day_13/: better_prompt.py  main.py  test.py  test1.ipynb  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py
AIProjects/day_14/: test3.py  test4.py  test5.py
AIProjects/day_15/: test.ipynb  test.py
AIProjects/day_16/: test.ipynb  test1.py  test2.py  test3.py  test4.py
AIProjects/day_17/: test10.py  test11.py  test12.py  test20.py  test21.py  test22.py  test3.py  test5.py
AIProjects/day_18/: driver.py  driver2.py
AIProjects/day_2/: chatbot_3.py  chatbot_4.py  langgraph_tutorial1.ipynb  leetcode_p2342.py
AIProjects/day_20/: test2.ipynb
AIProjects/day_3/: leetcode_3066.cpp  leetcode_3066.py
AIProjects/day_4/: network_tutorial.ipynb  supervisor.ipynb
AIProjects/day_5/: handoff.py  hh.py  langgraph_react.py  script.py  supervisor.ipynb  supervisor.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py
AIProjects/day_6/: hh.py  pydantic_gradio_code.py  pydantic_gradio_search.py  pydantic_markdown.py  pydantic_model.py  pydantic_test.ipynb  pydantic_whales.py  sreamlit_ap.py  streamlit_chatbot.py  test.py  test2.py  test3.py  web_search.py  web_search2.py
AIProjects/day_7/: agent_prompts.py  agent_schema.py  crawl_pydantic_ai_docs.py  crawler1.py  crawler2.py  dummy_agent_library.ipynb  multi_agent.py  pydantic_gradio_code.py  test.ipynb  test.py  test3.py
AIProjects/day_8/: llamaindex_tutorial.ipynb  test.py  test2.py
AIProjects/day_8/sql/: default__vector_store.json  docstore.json  index_store.json
AIProjects/day_9/: llama_chat_code.py  llama_chat_code2.py  llama_chat_history.py  llama_chat_search.py  multi_step_workflow.html  test.ipynb  test.md  test.py  workflow1.py
AIProjects/day_9/pydantic_proj/: pydantic_ai_coder.py  run_email.py  write_jokes.py
CUDA/day1/: vector_add.cu
CUDA/day2/: vector_add.cu
CUDA/day3/: mat_mul_shared.cu  stencil.cu
CUDA/day_1/: vec_add.c  vec_add.cu
CUDA/day_10/: pprefix_sum.cu
CUDA/day_2/: p1.cu  p1.py  readings.txt
CUDA/day_3/: p2_zip.cu  p2_zip.py  p3_guard.cu  p3_guard.py  p4_2Dmap.cu  p4_2Dmap.py
CUDA/day_4/: p5_broadcast.cu  p5_broadcast.py
CUDA/day_5/: mat_mul.cu
CUDA/day_6/: stencil_1d.cu
CUDA/day_7/: stencil_2d.cu
CUDA/day_8/: parallel_redutcion.cu  stencil2d_shared.cu
CUDA/day_9/: gaussian_elim.cu
Old/AIProjects/day2/: gradio_app.ipynb
Old/AIProjects/day3/: smol_agent.ipynb
Old/CUDA/day1/: vector_add.c
Old/CUDA/day2/: hello.cu
Old/Papers/day1/: deepseek.md
Old/Papers/day2/: s1_paper.md
Papers/day3/: omnihuman.md
