[project]
name = "100-days-of-grind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.3.0",
    "diffusers>=0.32.2",
    "duckduckgo-search>=7.3.2",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.17",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.2.70",
    "protobuf>=5.29.3",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.24",
    "streamlit>=1.42.0",
    "torch>=2.6.0",
    "transformers>=4.48.3",
]
