[project]
name = "100-days-of-grind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "crawl4ai>=0.4.248",
    "duckduckgo-search>=7.3.2",
    "google-genai>=1.2.0",
    "google-generativeai>=0.8.4",
    "huggingface-hub>=0.28.1",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.17",
    "langchain-experimental>=0.3.4",
    "llama-index>=0.12.18",
    "llama-index-llms-gemini>=0.4.10",
    "playwright>=1.50.0",
    "pydantic-ai>=0.0.24",
    "supabase>=2.13.0",
    "torch>=2.6.0",
]
